[build-system]
# These are the assumed default build requirements from pip:
# https://pip.pypa.io/en/stable/reference/pip/#pep-517-and-518-support
requires = ["setuptools>=40.8.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "poetry-keyring-issue"
version = "0.1.0"
description = "demo of keyring issue"
authors = ["numbertheory"]
homepage = "https://github.com/numbertheory/poetry-keyring-issue"
repository = "https://github.com/numbertheory/poetry-keyring-issue"

[tool.poetry.dependencies]
python = "^3.4"
cleo = "^0.7.6"
clikit = "^0.4.1"
requests = "^2.18"
cachy = "^0.3.0"
requests-toolbelt = "^0.8.0"
jsonschema = "^3.1"
pyrsistent = "^0.14.2"
pyparsing = "^2.2"
cachecontrol = { version = "^0.12.4", extras = ["filecache"] }
pkginfo = "^1.4"
html5lib = "^1.0"
shellingham = "^1.1"
tomlkit = "^0.5.8"
pexpect = "^4.7.0"
